--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<span class="say">(^-^)Nhân ngày 20 - 10 Ngày Liên Hiệp Phụ Nữ Việt Nam(^-^)</span><br>
 					<span class="say">Chúc một nửa thế giới luôn xinh đẹp và duyên dáng nhé.</span><br>
 					<span class="say">Chúc tất cả luôn tràn ngập hạnh phúc và luôn mạnh khỏe.</span><br>
-					<span class="say">Chúc thật nhiều may mắn đến với em. Yêu em ^.^ </span><br>
+					<span class="say">Chúc các bạn gái D8 thật xinh tươi, hạnh phúc và nhận được nhiều quà!</span><br>
 					<span class="say" style="text-align:right;">Son_7, coder!</span><br>
 				</font>
 			</div>
